--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>980</width>
-    <height>570</height>
+    <height>488</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1738,6 +1738,9 @@
                <property name="enabled">
                 <bool>true</bool>
                </property>
+               <property name="toolTip">
+                <string>Segment length for bearing computation.</string>
+               </property>
                <property name="minimum">
                 <double>0.010000000000000</double>
                </property>
@@ -1923,6 +1926,9 @@
                <property name="minimum">
                 <number>1</number>
                </property>
+               <property name="maximum">
+                <number>100000</number>
+               </property>
                <property name="value">
                 <number>1</number>
                </property>
@@ -1930,6 +1936,9 @@
              </item>
              <item row="8" column="1">
               <widget class="QSpinBox" name="spinBoxCurvatureStepSize">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="minimum">
                 <number>1</number>
                </property>
@@ -1956,6 +1965,9 @@
                <property name="minimum">
                 <number>1</number>
                </property>
+               <property name="maximum">
+                <number>100000</number>
+               </property>
               </widget>
              </item>
              <item row="9" column="2">
@@ -1965,6 +1977,9 @@
                </property>
                <property name="minimum">
                 <number>1</number>
+               </property>
+               <property name="maximum">
+                <number>100000000</number>
                </property>
               </widget>
              </item>
