--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>980</width>
-    <height>545</height>
+    <height>552</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1992,13 +1992,13 @@
                 <string>Maximum length for region growing to combine centerlines.</string>
                </property>
                <property name="decimals">
-                <number>3</number>
+                <number>2</number>
                </property>
                <property name="minimum">
-                <double>0.001000000000000</double>
+                <double>0.000000000000000</double>
                </property>
                <property name="singleStep">
-                <double>0.100000000000000</double>
+                <double>0.010000000000000</double>
                </property>
                <property name="value">
                 <double>0.150000000000000</double>
@@ -2013,7 +2013,17 @@
               </widget>
              </item>
              <item row="22" column="2">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_6"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxSortingNearRatio">
+               <property name="maximum">
+                <double>1.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>0.010000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.800000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="23" column="0">
               <widget class="Line" name="line_29">
@@ -2051,7 +2061,10 @@
               </widget>
              </item>
              <item row="10" column="0">
-              <widget class="QCheckBox" name="checkBox_8">
+              <widget class="QCheckBox" name="checkBoxPairsApplyDensityFilter">
+               <property name="toolTip">
+                <string>Apply local density filtering.</string>
+               </property>
                <property name="text">
                 <string>Density</string>
                </property>
@@ -2065,23 +2078,66 @@
               </widget>
              </item>
              <item row="11" column="0">
-              <widget class="QCheckBox" name="checkBox_9">
+              <widget class="QCheckBox" name="checkBoxPairsApplyClusterFilter">
+               <property name="toolTip">
+                <string>Apply cluster-based filtering.</string>
+               </property>
                <property name="text">
                 <string>Cluster</string>
                </property>
               </widget>
              </item>
              <item row="10" column="2">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_21"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxPairsDensityFilterThreshold">
+               <property name="toolTip">
+                <string>Minimum number of points-in-sphere threshold.</string>
+               </property>
+               <property name="value">
+                <double>15.000000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="12" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_23"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxClusterHeightRange">
+               <property name="toolTip">
+                <string>Intra cluster height range.</string>
+               </property>
+               <property name="singleStep">
+                <double>0.010000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.050000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="12" column="2">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_24"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxClusterHeightThreshold">
+               <property name="toolTip">
+                <string>Intra cluster height difference threshold.</string>
+               </property>
+               <property name="singleStep">
+                <double>0.010000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.050000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="10" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_20"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxPairsDensityFilterKernelRadius">
+               <property name="toolTip">
+                <string>Spherical local density kernel radius.</string>
+               </property>
+               <property name="decimals">
+                <number>3</number>
+               </property>
+               <property name="singleStep">
+                <double>0.010000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.035000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="12" column="0">
               <widget class="QLabel" name="label_31">
@@ -2192,7 +2248,14 @@
               <widget class="QDoubleSpinBox" name="doubleSpinBox_10"/>
              </item>
              <item row="11" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_22"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxPairsClusterDistance">
+               <property name="toolTip">
+                <string>Inter Cluster distance in 2D (X,Y).</string>
+               </property>
+               <property name="value">
+                <double>15.000000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="9" column="2">
               <widget class="QLabel" name="label_34">
@@ -2237,6 +2300,9 @@
              </item>
              <item row="17" column="1">
               <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+               <property name="toolTip">
+                <string>Minimum point-to-point distance.</string>
+               </property>
                <property name="decimals">
                 <number>3</number>
                </property>
@@ -2249,7 +2315,10 @@
               </widget>
              </item>
              <item row="18" column="0">
-              <widget class="QCheckBox" name="checkBox_2">
+              <widget class="QCheckBox" name="checkBoxCenterpointsApplyDensityFilter">
+               <property name="toolTip">
+                <string>Apply local density filtering.</string>
+               </property>
                <property name="text">
                 <string>Density</string>
                </property>
@@ -2259,7 +2328,10 @@
               </widget>
              </item>
              <item row="17" column="0">
-              <widget class="QCheckBox" name="checkBox">
+              <widget class="QCheckBox" name="checkBoxCenterpointsApplyDuplicateFilter">
+               <property name="toolTip">
+                <string>Apply duplicate filtering.</string>
+               </property>
                <property name="text">
                 <string>Duplicates</string>
                </property>
@@ -2269,7 +2341,10 @@
               </widget>
              </item>
              <item row="18" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox">
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxCenterpointsDensityFilterKernelRadius">
+               <property name="toolTip">
+                <string>Spherical kernel radius.</string>
+               </property>
                <property name="minimum">
                 <double>0.010000000000000</double>
                </property>
@@ -2303,7 +2378,10 @@
               </widget>
              </item>
              <item row="18" column="2">
-              <widget class="QSpinBox" name="spinBox">
+              <widget class="QSpinBox" name="spinBoxCenterpointsDensityThreshold">
+               <property name="toolTip">
+                <string>Minimum number of neighbours inside specified sphere.</string>
+               </property>
                <property name="maximum">
                 <number>10000</number>
                </property>
@@ -2362,7 +2440,14 @@
               </widget>
              </item>
              <item row="21" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_3"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxSortingFarDistance">
+               <property name="singleStep">
+                <double>0.100000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.700000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="20" column="0">
               <widget class="QLabel" name="label_16">
@@ -2379,7 +2464,14 @@
               </widget>
              </item>
              <item row="21" column="2">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_4"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxSortingFarRatio">
+               <property name="singleStep">
+                <double>0.010000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.900000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="30" column="0">
               <widget class="QLabel" name="label_24">
@@ -2450,7 +2542,17 @@
               </widget>
              </item>
              <item row="7" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_18"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxPairsMaxElevationDiff">
+               <property name="toolTip">
+                <string>Maximal elevation difference between paired points.</string>
+               </property>
+               <property name="singleStep">
+                <double>0.100000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.200000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="6" column="0">
               <widget class="QLabel" name="label_28">
@@ -2460,9 +2562,12 @@
               </widget>
              </item>
              <item row="4" column="1">
-              <widget class="QCheckBox" name="checkBox_7">
+              <widget class="QCheckBox" name="checkBoxPairsIncludePreviousSection">
                <property name="enabled">
                 <bool>false</bool>
+               </property>
+               <property name="toolTip">
+                <string>Include the previous section in pair computation.</string>
                </property>
                <property name="text">
                 <string>Previous</string>
@@ -2470,10 +2575,33 @@
               </widget>
              </item>
              <item row="7" column="0">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_17"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxPairsMaxError">
+               <property name="toolTip">
+                <string>Maximal error regarding point-to-point distance for two points to be considered as pair.</string>
+               </property>
+               <property name="decimals">
+                <number>3</number>
+               </property>
+               <property name="singleStep">
+                <double>0.001000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.010000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="7" column="2">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_19"/>
+              <widget class="QDoubleSpinBox" name="doubleSpinBoxPointPairProximity">
+               <property name="toolTip">
+                <string>Minimum distance between second points of pairs sharing the first point.</string>
+               </property>
+               <property name="singleStep">
+                <double>0.100000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.100000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="4" column="0">
               <widget class="QLabel" name="label_35">
@@ -2483,7 +2611,10 @@
               </widget>
              </item>
              <item row="4" column="2">
-              <widget class="QCheckBox" name="checkBox_10">
+              <widget class="QCheckBox" name="checkBoxPairsIncludeNextSection">
+               <property name="toolTip">
+                <string>Include the following section in pair computation.</string>
+               </property>
                <property name="text">
                 <string>Next</string>
                </property>
