--- a/UserInterface/Resources/OpenInfraPlatform.qrc
+++ b/UserInterface/Resources/OpenInfraPlatform.qrc
@@ -4,6 +4,7 @@
     <file>clothoid.svg</file>
     <file>open.png</file>
     <file>redo.svg</file>
+    <file>ZoomToOneObject.png</file>
   </qresource>
   <qresource prefix="images">
     <file>splash.png</file>
